# kg-coach-dashboard

./: .dockerignore  .env.example  .gitignore  ASSESSMENT.md  Makefile  README.md  architecture.md  docker-compose.yml  hyb.json  m2.json  requirements.md  vercel.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py  canvas.py  copilot.py  exercises.py  generator.py  graph.py  injury.py  members.py
backend/app/copilot/: __init__.py  agent.py  rag.py
backend/app/data/: loader.py  paths.py
backend/app/generator/: __init__.py  assembler.py  llm.py  narrate.py  pipeline.py  provenance.py  store.py  synthesize.py  templates.py  workout_send_store.py
backend/app/graph/: conditional_filter.py  member_kg.py  movement_kg.py  safety_filter.py
backend/app/models/: exercise.py  healing.py  injury.py  member.py  plan.py
backend/app/observability/: __init__.py  decision_trace.py  tracing.py
backend/app/ontology/: __init__.py  catalog.py  concepts.py  loader.py  snomed_anatomy.json  snomed_knee.json
backend/app/resolver/: __init__.py  embeddings.py  fuzzy.py  resolver.py
backend/data/: exercise_movements.json
backend/data/members/: jordan.json
backend/tests/: test_auth.py  test_cardio_prescription.py  test_conditional_filter.py  test_copilot.py  test_exercises.py  test_generator.py  test_graph.py  test_healing_curves.py  test_hybrid_catalog.py  test_injury_model.py  test_loader.py  test_member_kg.py  test_members.py  test_movement_kg.py  test_ontology.py  test_provenance.py  test_rag.py  test_resolver.py  test_safety_filter.py  test_templates.py
data/: corpus.json  exercise_movements.json  exercises.hybrid.json  member-context.json
data/members/: mico.json
docs/: DEMO_SCRIPT.md  SCHEMA.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/hooks/: useCanvas.ts  (+6 more)
scripts/: fetch_snomed.py
(+41 files in other folders)
