[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kg-coach-backend"
version = "0.1.0"
description = "Knowledge-Graph-Backed Coach Dashboard — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "networkx>=3.4.0",
    "pydantic>=2.9.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "rapidfuzz>=3.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Local semantic embeddings (resolver Pass 3 + embedding RAG).  Pulls in
# torch (~2 GB+), so it is omitted from size-constrained deployments such as
# Vercel Lambda, where the code falls back to fuzzy / keyword matching.
embeddings = [
    "sentence-transformers>=3.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
